Fix context menu z-index

--- a/src/frontend/views/TimelineView/Clip.styl
+++ b/src/frontend/views/TimelineView/Clip.styl
@@ -27,7 +27,7 @@
         background-color #7a1d55
 
     &.Clip--active
-        // box-shadow 0 0 3px rgba(0, 0, 0, .8)
+        z-index 1
 
         &.Clip--video
             background-color #7e50e1
